fix misalignment

--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -186,7 +186,7 @@ body {
 	.info-subsection {
 		width: calc(100% - 75px);
 		position: relative;
-		left: 8%;
+		left: 9%;
 		top: 2%;
 		padding: 10px;
 		border-radius: 8px;
